edited text in index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </style>
   </head>
   <body>
-    <h1>Hello, I'm [Your Name]!</h1>
+    <h1>Hello World, I'm Siru!</h1>
     <div class="card">
-      <p>Welcome to my portfolio.</p>
-      <p>I’m learning web development!</p>
+      <p>Welcome to my page.</p>
+      <p>I’m learning stuff.</p>
     </div>
   </body>
 </html>
