--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Siru Räty</title>
     <style>
       body {
         font-family: Arial, sans-serif;
