main, new template

--- a/index.html
+++ b/index.html
@@ -1,54 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>[Your Name]</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Siru Räty</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Siru Räty</h1>
-      <p class="subtitle">Data analysis • Healthcare • Healthtech </p>
+      <p>Analytics • Health Tech • Innovation</p>
       <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="projects/">Projects</a>
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
       </nav>
     </header>
 
     <main>
-      <section id="about">
-        <h2>About Me</h2>
+      <section>
+        <h2>About</h2>
         <p>
-          Hello world! I’m Siru.
-        </p>
-      </section>
-
-      <section id="projects">
-        <h2>Projects</h2>
-        <ul class="project-list">
-          <li>
-            <h3>📊 Analytics Dashboard</h3>
-            <p>A simple dashboard that visualizes key health insurance metrics.</p>
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub →</a>
-          </li>
-          <li>
-            <h3>🧠 Predictive Model Study</h3>
-            <p>Master’s thesis project exploring health data and statistical modeling.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub →</a>
-          </li>
-        </ul>
-      </section>
-
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>
-          You can find me on
-          <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-          or send me an <a href="mailto:youremail@example.com">email</a>.
+          I’m a data and analytics enthusiast interested in digital health, 
+          innovation, and applying statistical methods to real-world challenges. 
+          This site collects a few of my ongoing and past projects.
         </p>
       </section>
     </main>
@@ -59,7 +34,7 @@
   </div>
 
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
