--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-      <p>© <span id="year"></span> [Your Name]</p>
+      <p>© <span id="year"></span> Siru Räty</p>
     </footer>
   </div>
 
