--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Analytics • Health Tech • Innovation</p>
       <nav>
         <a href="projects/">Projects</a>
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/siruraty/" target="_blank">LinkedIn</a>
       </nav>
     </header>
 
