commented out projects link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <h1>Siru Räty</h1>
       <p>Analytics • Health Tech • Innovation</p>
       <nav>
-        <a href="projects/">Projects</a>
+        <!--uncomment when ready:-->
+        <!-- <a href="projects/">Projects</a> -->
         <a href="https://www.linkedin.com/in/siruraty/" target="_blank">LinkedIn</a>
       </nav>
     </header>
@@ -24,6 +25,8 @@
           I’m a data and analytics enthusiast interested in digital health, 
           innovation, and applying statistical methods to real-world challenges. 
           This site collects a few of my ongoing and past projects.
+
+          Currently building this site, more coming soon.
         </p>
       </section>
     </main>
