bright green added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           innovation, and applying statistical methods to real-world challenges. 
           This site collects a few of my ongoing and past projects.
           <br><br>
-          Currently building this site, more coming soon.
+          Currently building this site, more <span class="brightgreen">coming soon</span>.
         </p>
       </section>
     </main>
